syntax = 'proto3';

option java_package = 'com.mora278.aptivist_protodatastore';
option java_multiple_files = true;

message UserPreferencesBasic {
//  reserved "age";
//  reserved 2;
  string user_name = 1;
  uint32 age = 2;
  repeated string tasks = 3;
//  string ageString = 4;
}

message UserPreferencesAdvanced {
  repeated UserModel users = 1;
  repeated TaskModel tasks = 2;
}

message UserModel {
  string user_name = 1;
  int32 age = 2;
}

message TaskModel {
  bool is_done = 1;
  string description = 2;
  optional UserModel user_assigned = 3;

}

message UserPreferencesTesting {
//  reserved 4;
//  reserved "age";
  string name = 1;
  string last_name = 2;
  string e_mail = 3;
  string age = 4;
  string description = 5;
}